# MCP-Servers

./: INTEGRATION_GUIDE.md  LICENSE  MCP_SERVERS_FINAL_INVENTORY.md  README.md  TRICKED_OUT_ATLASSIAN_SUCCESS.md  claude-code-mcp-settings.json  claude-code-settings.json  install.sh  package-lock.json  registry.json  sanitize_all_secrets.py  sanitize_secrets.py  start-command-manager.sh  start-desktop-automation.sh  start-fastmcp.sh  start-mcp-proxy.sh  test-servers.sh
atlassian-enterprise/: ATLASSIAN_MCP_SETUP.md  CHANGELOG.md  ENTERPRISE_FEATURES.md  README.md  REDIS-CONNECTION-FIX.md  ROADMAP.md  USER_GUIDE.md  atlassian_mcp_extensions_plan.md  cline_mcp_settings.json  get-pip.py  jsm_prototype_implementation.py  mcp_settings.back.json  pyproject.toml  start_atlassian_enterprise.sh  start_atlassian_mcp.sh
atlassian-enterprise/atlassian/: ADAPT_Atlassian_Ops_LaunchKit_README.md  Confluence_JIRA_Macro_Template.csv  JIRA_Automation_Rules.json  JIRA_Automation_Rules_Template.csv  JIRA_Default_Board_Schema.csv  JIRA_LLM_Nova_Enhanced_Sprint_Tasks.csv  JIRA_LLM_Nova_Sprint_Tasks.csv  JIRA_Service_Manager_Request_Template.csv  create_er_board.py  create_stella_board.py  echo_resonance_dashboards.md  getting_started.md  jira_setup_fixed.py  next_steps_implementation.md  project_categories.json  setup_er_jsm_confluence.py  team_components.json
atlassian-enterprise/cline_docs/: progress.md
atlassian-enterprise/config/: redis_config.py
atlassian-enterprise/docs/: atlassian_custom_fields_global_config.md  custom_fields_usage.md  implementation_summary.md
magic/: index.js  (+2 more)
(+555 files in other folders)
